# SmartLed

./: .gitignore  CMakeLists.txt  Readme.md
lib/: CMakeLists.txt
lib/SmartLed/: CMakeLists.txt  SmartLed.cpp  SmartLed.h
src/: CMakeLists.txt  main.cpp
